# WordCard

./: .gitignore  LXGWWenKai-Regular.cw127.pkl  LXGWWenKai-Regular.pkl  PROJECT.md  README.md  REVIEW.md  api.py  article_card.py  card.py  design.md  extract_gre_vocab.py  generate_cards.py  generate_chapter_card.py  import_article.py  import_book.py  import_gre_vocab.py  llm.py  llm_one_shot.py  ollama_one_shot.py  ollama_translate.py  parse_one_shot.py  run_qwen3.sh  solar_system.txt  solar_system_trans.txt  task.md  translate.py
gui/: Makefile  run_tests.sh  test_gui.c
gui/cbridge/: gui_tick.c  gui_tick.h  lua_engine.c  lua_engine.h
gui/gpui/: Cargo.toml
gui/gpui/src/: lib.rs
gui/gpui/src/components/: mod.rs  mod.rs.bak
gui/lua/: gui.lua  main.lua  test_study_flow.lua
gui/reference/: gui-architecture.md
importer/: __init__.py
importer/wrappers/: Makefile  README.md  mobi_wrapper.cpp  pdf_wrapper.cpp
output/: solar_system_one_shot.txt  solar_system_parsed.md  solar_system_parsed.txt  solar_system_trans.md  solar_system_trans.txt
res/: solar_system.txt
src/: Makefile  cache.h  cache_hnsw.h  cache_http_server.h  cache_index.h  cache_internal.h  cache_server.h  crc32.c  metrics.c  metrics.h  mmap.c  modes.c  pool.h  test_cache_basic.c  test_sm2.c  wordcard.c  wordcard.h
src/cache/: cache.c  hash_index.c  hnsw.c  http_server.c  index_persistence.c  iter.c  namespace.c  search.c  server.c  skip_list.c  sorted_array.c  source_analyzer.c  tag_index.c  vector_index.c
voice/: __init__.py
voice/wrappers/: README.md
