[package]
name = "wordcard_gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "wordcard_gui"
crate-type = ["cdylib"]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { path = "/opt/gpui-component/crates/ui" }
gpui-component-assets = { path = "/opt/gpui-component/crates/assets" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"

[profile.release]
opt-level = 3
lto = "thin"
